--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/fonts/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="/fonts/stylesheet1.css" type="text/css">
     <link rel="stylesheet" href="/fonts/sylesheet2.css" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Progect3</title>
 </head>
 <body>
@@ -14,10 +15,8 @@
         <div class="header__wrp_left">
             <button class="button__menu">
                 <span></span>
-                <span></span>
-                <span></span>
             </button>
-            <h1>Auctions listing</h1>
+            <h1 class="header__title">Auctions listing</h1>
         </div>
         <div class="header__wrp_right">
             <img class="header__img" src="./img/header_img.svg" alt="">
@@ -43,53 +42,155 @@
                     </select>
                 </div>
             </div>
-            <div class="select-marg">
-                <p class="select__title">Procedure type</p>
-                <div class="select_wrp">
-                    <select class="select" name="select-type">
-                        <option value="1">All types</option>
-                        <option value="2">English</option>
-                        <option value="3">Dutch</option>
-                        <option value="4">Priority English</option>
-                        <option value="5">Multiawards</option>
-                    </select>
+            <div class="hide-space">
+                <div class="select-marg">
+                    <p class="select__title">Procedure type</p>
+                    <div class="select_wrp">
+                        <select class="select" name="select-type">
+                            <option value="1">All types</option>
+                            <option value="2">English</option>
+                            <option value="3">Dutch</option>
+                            <option value="4">Priority English</option>
+                            <option value="5">Multiawards</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="select-marg">
+                    <p class="select__title">Status</p>
+                    <div class="select_wrp">
+                        <select class="select" name="select-status">
+                            <option value="1">All statuses</option>
+                            <option value="2">Planned</option>
+                            <option value="3">Ongoing</option>
+                            <option value="4">Finished</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="select-interval select-marg">
+                    <p>Starting date</p>
+                    <div class="select__up"></div>
+                        <input class="select select_pad" type="date">
+                    </div>
+                    <div class="select__down">
+                        <input class="select select_pad" type="date">
+                    </div>
+                </div>
+                <div class="select-interval select-marg">
+                    <p>Starting price, <span>UAH</span></p>
+                    <div class="select__up">
+                        <input placeholder="0.00" class="select interval select_pad" type="number">
+                    </div>
+                    <div class="select__down">
+                        <input placeholder="0.00" class="select interval select_pad" type="number">
+                    </div>
                 </div>
             </div>
-            <div class="select-marg">
-                <p class="select__title">Status</p>
-                <div class="select_wrp">
-                    <select class="select" name="select-status">
-                        <option value="1">All statuses</option>
-                        <option value="2">Planned</option>
-                        <option value="3">Ongoing</option>
-                        <option value="4">Finished</option>
-                    </select>
-                </div>
+            <div class="filter">
+                <button class="filter__btn">
+                    <span class="filter__btn__hide">Hide filters</span>
+                    <span class="filter__btn__show">Show all filters</span>
+                </button>
             </div>
-            <div class="select-interval select-marg">
-                <p>Starting date</p>
-                <div class="select__up"></div>
-                    <input class="select select_pad" type="date">
-                </div>
-                <div class="select__down">
-                    <input class="select select_pad" type="date">
-                </div>
-            </div>
-            <div class="select-interval select-marg">
-                <p>Starting price, <span>UAH</span></p>
-                <div class="select__up">
-                    <input placeholder="0.00" class="select interval select_pad" type="number">
-                </div>
-                <div class="select__down">
-                    <input placeholder="0.00" class="select interval select_pad" type="number">
-                </div>
-            </div>
-            <p class="hide">Hide filters</p>
             <button class="apply">apply</button>
-            <div class="reset_wrp">
-            <button class="reset" type="reset">Reset all</button>
+            <div class="reset-wrp">
+                <button class="reset" type="reset">Reset all</button>
             </div>
         </form>
     </section>
+    <section class="simulator">
+        <p class="simulator__title">To learn how the auctions work try our test auctions simulator.</p>
+        <button class="blue__button">try the simulator</button>
+    </section>
+    <section class="right-block">
+        <div class="select-marg">
+            <p class="select__title">Sort</p>
+            <div class="select_wrp">
+                <select class="select" name="sort">
+                    <option value="1">No sorting</option>
+                </select>
+            </div>
+        </div>
+        <p class="auctions-quantity">45623 auctions</p>
+        <div class="auction auction__bkg">
+            <p class="auction__title">Special subsoil use permit – Site № 2 of the Gryada deposit.</p>
+            <p class="auction__id">UA-PS-2018-12-28-000007-3</p>
+            <p class="auction__type">english</p>
+            <div class="auction__prescription">
+                <div class="auction-prescription__left">
+                    <p>Organizer:</p>
+                    <p>Start date:</p>
+                    <p>Starting price:</p>
+                </div>
+                <div class="auction__prescription__right">
+                    <p>Прозорі аукціони</p>
+                    <p>2021-01-01 <span>09:45:51</span></p>
+                    <p><span>UAH</span> 300'500.00</p>
+                </div>
+            </div>
+        </div>
+        <div class="auction">
+            <p class="auction__title">Recycled metal raw materials (scrap of ferrous metals (scr...</p>
+            <p class="auction__id">UA-PS-2018-12-28-000007-3</p>
+            <p class="auction__type">Priority english</p>
+            <div class="auction__prescription">
+                <div class="auction-prescription__left">
+                    <p>Organizer:</p>
+                    <p>Start date:</p>
+                    <p>Starting price:</p>
+                </div>
+                <div class="auction__prescription__right">
+                    <p>Прозорі аукціони</p>
+                    <p>2021-01-01 <span>09:45:51</span></p>
+                    <p><span>UAH</span> 1'200'000.00 грн</p>
+                </div>
+            </div>
+        </div>
+        <div class="auction auction__bkg">
+            <p class="auction__title">Special subsoil use permit – Site № 2 of the Gryada deposit.</p>
+            <p class="auction__id">UA-PS-2018-12-28-000007-3</p>
+            <p class="auction__type">english</p>
+            <div class="auction__prescription">
+                <div class="auction-prescription__left">
+                    <p>Organizer:</p>
+                    <p>Start date:</p>
+                    <p>Starting price:</p>
+                </div>
+                <div class="auction__prescription__right">
+                    <p>Прозорі аукціони</p>
+                    <p>2021-01-01 <span>09:45:51</span></p>
+                    <p><span>UAH</span>UAH 300'500.00</p>
+                </div>
+            </div>
+        </div>
+        <div class="auction">
+            <p class="auction__title">Recycled metal raw materials (scrap of ferrous metals (scr...</p>
+            <p class="auction__id">UA-PS-2018-12-28-000007-3</p>
+            <p class="auction__type">Priority english</p>
+            <div class="auction__prescription">
+                <div class="auction-prescription__left">
+                    <p>Organizer:</p>
+                    <p>Start date:</p>
+                    <p>Starting price:</p>
+                </div>
+                <div class="auction__prescription__right">
+                    <p>Прозорі аукціони</p>
+                    <p>2021-01-01 <span>09:45:51</span></p>
+                    <p><span>UAH</span> 1'200'000.00 грн</p>
+                </div>
+            </div>
+        </div>
+        <button class="more-actions">show 10 more auctions</button>
+        <div class="pages">
+        <button class="peges__item">1</button>
+        <button class="peges__item">2</button>
+        <button class="peges__item">3</button>
+        <button class="peges__item">4</button>
+        <button class="peges__item">...</button>
+        <button class="peges__item">282</button>
+        <button class="peges__item"><img src="./img/Arrow left blue.svg" alt="arrow-left"></button>
+        <button class="peges__item"><img src="./img/Arrow right blue.svg" alt="arrow-right"></button>
+        </div>
+    </section>
+    <script src="./js/script.js"></script>
 </body>
 </html>
